Fix jumpy movement of home in navbar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,7 +31,9 @@ body {
     background-color: var(--secondary-color);
     padding-top: 40px; /* Adjusted for fixed navbar */
 }
-
+section {
+    padding-top: 4rem; /* Stops navbar from overlapping headings */
+}
 /* Navbar styles */
 
 .navbar {
